force-app/main/default/objects/Order__c/fields/Number_of_Deliveries_Left__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Deliveries_Left__c</fullName>
    <label>Number of Deliveries Left</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>