force-app/main/default/objects/Order__c/fields/Total_Number_of_Deliveries__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Deliveries__c</fullName>
    <label>Total Number of Deliveries</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>